# atlas-unity-version-manager

./: .gitignore  Jenkinsfile  README.md  build.gradle  gradle_check_versions.sh  gradlew.bat  settings.gradle
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
gradle/wrapper/: gradle-wrapper.properties
jni/: build.gradle
jni/rust/: Cargo.toml  build.gradle
jni/rust/src/: install.rs  lib.rs
jni/src/main/java/: net_wooga_uvm_UnityVersionManager.h
jni/src/main/java/net/wooga/uvm/: Component.java  Installation.java  UnityVersionManager.java
jni/src/test/groovy/net/wooga/uvm/: InstallationSpec.groovy  UnityVersionManagerSpec.groovy
src/integrationTest/groovy/wooga/gradle/unity/version/manager/: IntegrationSpec.groovy  UnityVersionManagerExtensionIntegrationSpec.groovy  UnityVersionManagerPluginIntegrationSpec.groovy  UvmCheckInstalltionIntegrationSpec.groovy  UvmInstallUnityIntegrationSpec.groovy  UvmListInstallatonsIntegrationSpec.groovy
src/main/groovy/wooga/gradle/unity/version/manager/: UnityVersionManagerConsts.groovy  UnityVersionManagerConventions.groovy  UnityVersionManagerExtension.groovy  UnityVersionManagerPlugin.groovy
src/main/groovy/wooga/gradle/unity/version/manager/error/: UvmInstallException.groovy
src/main/groovy/wooga/gradle/unity/version/manager/internal/: DefaultUnityVersionManagerExtension.groovy
src/test/groovy/wooga/gradle/unity/version/manager/: UnityVersionManagerPluginActivationSpec.groovy  UnityVersionManagerPluginSpec.groovy
(+4 files in other folders)
