[package]
name = "uvm_jni"
version = "0.0.1"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
jni = "0.10.2"
uvm_core = { git = "https://github.com/Larusso/unity-version-manager.git", rev="4959648f38b269e7e7064e65344b797d4833be3b"}
error-chain = "0.12.0"
log = "0.4.6"

[lib]
crate-type = ["cdylib"]
